Bug #155285. Array.join(undefined) should use ',' - ECMA compatibility. r=scole, sr=brendan.